--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,38 +1,29 @@
-name: CodeQL Scan
+name: "CodeQL Analysis"
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [ main ]
+  schedule:
+    - cron: '0 15 * * 0'
 
 jobs:
-  build:
+  analyze:
+    name: Analyze
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      # with:
+      #   languages: 'autobuild'  # or specific languages
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run CodeQL Scan
+    - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
-      with:
-        languages: javascript
-        database-dump: ${{ github.workspace }}/codeql-database
-        working-directory: .
-
-    - name: Upload CodeQL results
-      uses: actions/upload-artifact@v2
-      with:
-        name: codeql-results
-        path: ${{ github.workspace }}/codeql-database
+      # with:
+      #   additional inputs if necessary
